updated project files

--- a/index.html
+++ b/index.html
@@ -10,29 +10,70 @@
 
 <body>
     <nav>
-        <h2>PORTFOLIO</h2>
+        <img src="./assets/img/nav-img.png" alt="nav-img">
         <div class="nav-items">
-            <a class="text-black" href="">Home</a>
-            <a class="text-black" href="">About Us
-                <select name="About" id="">
-                    <option value="Team"></option>
-                    <option value="Pricing"></option>
-                    <option value="FAQ"></option>
-                    <option value="More Links"></option>
-                </select>
-            </a>
-            <a class="text-black" href="">Portfolio</a>
-            <a class="text-black" href="">Services</a>
-            <a class="text-black" href="">Testimonials</a>
-            <a class="text-black" href="">Blog</a>
-            <a class="text-black" href="">Contact</a>
+            <a class="text-black" href="">HOME</a>
+            <a class="text-black" href="">ABOUT</a>
+            <a class="text-black" href="">DERVICES</a>
+            <a class="text-black" href="">PORTFOLIO</a>
+            <a class="text-black" href="">PRICING</a>
+            <a class="text-black" href="">BLOG</a>
+            <a class="text-black" href="">PAGES</a>
+            <a class="text-black" href="">CONTACT</a>
         </div>
     </nav>
-    <section class="hero">
-        <h1>My Name is Charlotte Maanianu Seyab</h1>
-        <h2>I am a Web Developer</h2>
-        <button>Get In Touch</button>
+    <section class="hero-section">
+        <div class="hero-items">
+            <h1>I am Developer <br>Charlotte M Seyab</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>Illo, hic beatae sed ex voluptas qui.</p>
+            <button class="btn1 rotate-center ">LEARN MORE</button>
+            <button class="btn2 rotate-center">HIRE ME</button>
+        </div>
+        <img src="./assets/img/hero-img.png" alt="hero-img">
     </section>
+    <section class="about">
+        <img class="shadow-pop-tr" src="./assets/img/about-img.png" alt="about-img">
+        <div class="about-items">
+            <h3>ABOUT ME</h3>
+            <h2>Personal Details</h2>
+            <p>Here, I focus on a range of items and features that we use in life without giving them a second thought.
+                such as Coca Cola. Dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+            <button class="btn3 scale-up-center">VIEW FULL DETAILS</button>
+        </div>
+    </section>
+    <section>
+        <div class="services">
+            <h2>MY OFFERED SERVICES</h2>
+            <p>At about this time of year, some months after New Year’s <br> resolutions have been made and kept, or made and
+                neglected.</p>
+        </div>
+        <div class="services-items">
+            <div class="my-items">
+                <span>&#9684;</span>
+                <h4>Web Design</h4>
+                <p>“It is not because things are difficult that we do not dare; it is because we do not dare that they
+                    are difficult.”</p>
+            </div>
+            <div class="my-items">
+                <span>&#128187;</span>
+                <h4>Web Development</h4>
+                <p>If you are an entrepreneur, you know that your success cannot depend on the opinions of others. Like
+                    the wind, opinions.</p>
+            </div>
+            <div class="my-items">
+                <span>&#128248;</span>
+                <h4>Photography</h4>
+                <p>Do you want to be even more successful? Learn to love learning and growth. The more effort you put
+                    into improving your skills. Lorem ipsum dolor sit amet.</p>
+            </div>
+        </div>
+    </section>
+    <section>
+        
+    </section>
+    <section>dytsjry</section>
+    <section>dytsjry</section>
 </body>
 
 </html>
