--- a/index.html
+++ b/index.html
@@ -70,7 +70,24 @@
         </div>
     </section>
     <section>
-        
+        <div class="statistics">
+        <div class="statistics-items itm1">
+            <span><img src="./assets/img/checklist.png" alt=""></span><br>
+            <span>230 <br> Completed Projects</span>
+        </div>
+         <div class="statistics-items itm2">
+            <span><img src="./assets/img/person.png" alt=""></span><br>
+            <span>1068 <br> Happy Clients</span>
+         </div>
+         <div class="statistics-items itm3">
+            <span><img src="./assets/img/hand.png" alt=""></span><br>
+            <span>230 <br> Prospective Clients</span>
+         </div>
+         <div class="statistics-items itm4">
+            <span><img src="./assets/img/bulb.png" alt=""></span><br>
+            <span>330 <br> Completed Projects</span>
+         </div>
+         </div>
     </section>
     <section>dytsjry</section>
     <section>dytsjry</section>
