--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="nav-items">
             <a class="text-black" href="">HOME</a>
             <a class="text-black" href="">ABOUT</a>
-            <a class="text-black" href="">DERVICES</a>
+            <a class="text-black" href="">SERVICES</a>
             <a class="text-black" href="">PORTFOLIO</a>
             <a class="text-black" href="">PRICING</a>
             <a class="text-black" href="">BLOG</a>
@@ -45,7 +45,8 @@
     <section>
         <div class="services">
             <h2>MY OFFERED SERVICES</h2>
-            <p>At about this time of year, some months after New Year’s <br> resolutions have been made and kept, or made and
+            <p>At about this time of year, some months after New Year’s <br> resolutions have been made and kept, or
+                made and
                 neglected.</p>
         </div>
         <div class="services-items">
@@ -71,26 +72,134 @@
     </section>
     <section>
         <div class="statistics">
-        <div class="statistics-items itm1">
-            <span><img src="./assets/img/checklist.png" alt=""></span><br>
-            <span>230 <br> Completed Projects</span>
+            <div class="statistics-items itm1">
+                <span><img src="./assets/img/checklist.png" alt=""></span><br>
+                <span>230 <br> Completed Projects</span>
+            </div>
+            <div class="statistics-items itm2">
+                <span><img src="./assets/img/person.png" alt=""></span><br>
+                <span>1068 <br> Happy Clients</span>
+            </div>
+            <div class="statistics-items itm3">
+                <span><img src="./assets/img/hand.png" alt=""></span><br>
+                <span>230 <br> Prospective Clients</span>
+            </div>
+            <div class="statistics-items itm4">
+                <span><img src="./assets/img/bulb.png" alt=""></span><br>
+                <span>330 <br> Completed Projects</span>
+            </div>
         </div>
-         <div class="statistics-items itm2">
-            <span><img src="./assets/img/person.png" alt=""></span><br>
-            <span>1068 <br> Happy Clients</span>
-         </div>
-         <div class="statistics-items itm3">
-            <span><img src="./assets/img/hand.png" alt=""></span><br>
-            <span>230 <br> Prospective Clients</span>
-         </div>
-         <div class="statistics-items itm4">
-            <span><img src="./assets/img/bulb.png" alt=""></span><br>
-            <span>330 <br> Completed Projects</span>
-         </div>
-         </div>
     </section>
-    <section>dytsjry</section>
-    <section>dytsjry</section>
+    <section>
+        <div class="package-item">
+            <h3>Choose Your Plan</h3>
+            <p>When someone does something that they know that they shouldn’t do, did they.</p>
+        </div>
+        <div class="package">
+            <div>
+                <span class="shadow-pop-tr">01</span>
+                <h6>Ecomony</h6>
+                <p>For the Individuals</p>
+                <hr>
+                <p>Secure Online Transfer</p>
+                <hr>
+                <p>Unlimited Styles for Interface</p>
+                <hr>
+                <p>Reliable Customer Service</p>
+                <hr>
+                <h5>$1000</h5>
+                <hr>
+                <h3>BUY NOW</h3>
+            </div>
+            <div>
+                <span class="shadow-pop-tr">02</span>
+                <h6>Business</h6>
+                <p>For the Individuals</p>
+                <hr>
+                <p>Secure Online Transfer</p>
+                <hr>
+                <p>Unlimited Styles for Interface</p>
+                <hr>
+                <p>Reliable Customer Service</p>
+                <hr>
+                <h5>$1500</h5>
+                <hr>
+                <h3>BUY NOW</h3>
+            </div>
+            <div>
+                <span class="shadow-pop-tr">03</span>
+                <h6>Premium</h6>
+                <p>For the Individuals</p>
+                <hr>
+                <p>Secure Online Transfer</p>
+                <hr>
+                <p>Unlimited Styles for Interface</p>
+                <hr>
+                <p>Reliable Customer Service</p>
+                <hr>
+                <h5>$2000</h5>
+                <hr>
+                <h3>BUY NOW</h3>
+            </div>
+            <div>
+                <span class="shadow-pop-tr">04</span>
+                <h6>Exclusive</h6>
+                <p>For the Individuals</p>
+                <hr>
+                <p>Secure Online Transfer</p>
+                <hr>
+                <p>Unlimited Styles for Interface</p>
+                <hr>
+                <p>Reliable Customer Service</p>
+                <hr>
+                <h5>$3000</h5>
+                <hr>
+                <h3>BUY NOW</h3>
+            </div>
+        </div>
+    </section>
+    <section class="contact">
+        <h2>WANT TO CONTACT ME ?</h2>
+        <h3>I'm Available</h3>
+        <button class="contact-btn">Contact Me Now</button>
+    </section>
+    <section>
+        <form class="form">
+            <div class="form-div">
+            <div class="form-itm" >
+                <div>
+                    <label for="fname">First Name</label>
+                    <input type="text" id="fname" name="fname"class="form-itm" >
+                </div>
+                <div>
+                    <label for="lname">Last Name</label>
+                    <input type="text" class="form-itm" > <br>
+                </div>
+            </div>
+            <div>
+                <label for="fname">Email</label>
+                <input type="email" class="input" > <br>
+            </div>
+            <div >
+                <label for="fname">Subject</label>
+                <input type="text" class="input"><br>
+            </div>
+            <div >
+                <label for="fname">Message</label>
+                <input type="text" id="msg" placeholder="Write Your Notes or Questions Here..." class="input">
+            </div>
+            <div>
+                <button class="button">Send Message</button>
+            </div>
+            </div>
+        </form>
+    </section>
+    <section class="last-sec">
+        <img src="./assets/img/premium.png" alt="">
+        <img src="./assets/img/creative.png" alt="">
+        <img src="./assets/img/premium2.png" alt="">
+        <img src="./assets/img/premium3.png" alt="">
+    </section>
 </body>
 
 </html>
