made changes to files

--- a/about.html
+++ b/about.html
@@ -15,14 +15,62 @@
         <div class="about-items">
             <h3>ABOUT ME</h3>
             <h2>Personal Details</h2>
-            <p>Hi, I’m Charlotte Maanianu Seyab, a backend-focused full-stack web developer with a strong foundation in server-side technologies like Node.js, Express, and databases such as MongoDB. While I’m proficient in front-end development with HTML, CSS, and JavaScript, my true expertise lies in building scalable, secure, and efficient back-end systems. <br> I specialize in creating APIs, managing databases, and ensuring smooth communication between front-end and back-end components. <br>
+            <p>Hi, I’m Charlotte Maanianu Seyab, a backend-focused full-stack web developer with a strong foundation in
+                server-side technologies like Node.js, Express, and databases such as MongoDB. While I’m proficient in
+                front-end development with HTML, CSS, and JavaScript, my true expertise lies in building scalable,
+                secure, and efficient back-end systems. <br> I specialize in creating APIs, managing databases, and
+                ensuring smooth communication between front-end and back-end components. <br>
 
-                With a background in social work, I bring a unique user-centered approach to my projects, ensuring that the solutions I develop are both functional and impactful. I’m continually expanding my knowledge in advanced backend technologies and aim to work on projects that challenge me to build robust, data-driven applications.</p>
+                With a background in social work, I bring a unique user-centered approach to my projects, ensuring that
+                the solutions I develop are both functional and impactful. I’m continually expanding my knowledge in
+                advanced backend technologies and aim to work on projects that challenge me to build robust, data-driven
+                applications.</p>
             <!-- <button class="btn3 scale-up-center">VIEW FULL DETAILS</button> -->
-            <a href="./assets/files/first resume (2) - Charlotte Seyab.docx.pdf"
-             download><button class="btn4 scale-up-center">Download CV</button></a>
+            <a href="./assets/files/first resume (2) - Charlotte Seyab.docx.pdf" download><button
+                    class="btn4 scale-up-center">Download CV</button></a>
         </div>
     </section>
+    <section id="education">
+        <h2>Educational Background</h2>
+        <div class="education-entry">
+            <h3>IBM SkillsBuild</h3>
+            <p class="degree">Course: Web Development Fundamentals</p>
+            <p class="date">Completed: August 2024</p>
+            <a href="https://skills.yourlearning.ibm.com/credential/CREDLY-ce744ad1-ca21-498e-a9ea-8c01f792977d" target="_blank"><button
+                    class="edu-btn">View</button></a>
+        </div>
+
+        <div class="education-entry">
+            <h3>ALX Training</h3>
+            <p class="degree">Virtual Assistant Certification</p>
+            <p class="date">Completed: October 2024</p>
+            <a href="https://intranet.alxswe.com/rails/active_storage/blobs/redirect/eyJfcmFpbHMiOnsibWVzc2FnZSI6IkJBaHBBMUZ4R0E9PSIsImV4cCI6bnVsbCwicHVyIjoiYmxvYl9pZCJ9fQ==--c79dca254109b1c8d03aa333c2c31eeec68b91f9/72-virtual-assistant-certificate-charlotte-maanianu-seyab.png"
+                target="_blank"><button class="edu-btn">View</button></a>
+        </div>
+
+        <div class="education-entry">
+            <h3>ALX Training</h3>
+            <p class="degree">AI Career Essentials</p>
+            <p class="date">Completed: October 2024</p>
+            <a href="https://alx-intranet-active-storage-production.s3.amazonaws.com/pdolfoj2q5q216j72m8kscuvnhw1?response-content-disposition=inline%3B%20filename%3D%2266-alx-aice-ai-career-essentials-certificate-charlotte-maanianu-seyab.png%22%3B%20filename%2A%3DUTF-8%27%2766-alx-aice-ai-career-essentials-certificate-charlotte-maanianu-seyab.png&response-content-type=image%2Fpng&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIARDDGGGOUSBVO6H7D%2F20241029%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20241029T132058Z&X-Amz-Expires=300&X-Amz-SignedHeaders=host&X-Amz-Signature=0eedb67d20b35d8e8f35d04137c13b38deb570073d6c7a096d5db9f134bcbdd6"
+                target="_blank"><button class="edu-btn">View</button"></a>
+        </div>
+
+        <div class="education-entry">
+            <h3>Certification in Power BI</h3>
+            <p class="degree">Certification Course</p>
+            <p class="date">Completed: July 2024</p>
+            <a href="" target="_blank"><button class="edu-btn">View</button"></a>
+        </div>
+
+        <div class="education-entry">
+            <h3>Certification in HTML and CSS</h3>
+            <p class="degree">Certification Course</p>
+            <p class="date">Completed: July 2024</p>
+            <a href="https://freecodecamp.org/certification/charlotteseyab/responsive-web-design" target="_blank"><button class="edu-btn">View</button"></a>
+        </div>
+    </section>
+
 </body>
 
 </html>
