--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <title>My Portfolio</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cinzel|Fauna+One">
     <script src="./messgae.js" defer></script>
     <script src="./index.js" defer></script>
-    <script src="./darkMode.js"></script>
+    <script src="./darkMode.js" defer></script>
+    <script src="script.js" defer></script>
     <style>
         /* width */
         ::-webkit-scrollbar {
@@ -42,20 +44,41 @@
             <a class="text-black nav-itm" href="#home">HOME</a>
             <a class="text-black" href="#about">ABOUT</a>
             <a class="text-black" href="#services">SERVICES</a>
-            <!-- <a class="text-black" href="">PAGES</a> -->
             <a class="text-black" href="#my works">MY WORKS</a>
             <a class="text-black" href="#contact">CONTACT</a>
         </div>
         <button onclick="myFunction()" class="dark-mode-btn" id="mode-toggle">Dark mode</button>
+        <div id="google_translate_element"></div>
     </nav>
-    <section class="hero-section" id="home">
-        <div class="hero-items">
+    <section class="hero-section hero" id="home">
+        <div class="hero-items" id="typewriter-container">
             <h1 class="typewriter glow" id="typewriter"></h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>Illo, hic beatae sed ex voluptas qui.</p>
-            <button class="btn1 rotate-center ">LEARN MORE</button>
-            <button class="btn2 rotate-center">HIRE ME</button>
+            <!-- <button class="btn1 rotate-center ">LEARN MORE</button> -->
+            <!-- "Hire Me" Button -->
+<button id="hireMeBtn" class="hire-me-button">Hire Me</button>
+
+<!-- Pop-up Form -->
+<div id="hireMeForm" class="form-popup">
+    <div class="form-container">
+        <span class="close" id="closeFormBtn">&times;</span>
+        <h2>Hire Me</h2>
+        <form action="submit_form.php" method="POST">
+            <label for="name">Name</label>
+            <input type="text" id="name" name="name" required>
+
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" required>
+
+            <label for="message">Message</label>
+            <textarea id="message" name="message" required></textarea>
+
+            <button type="submit" class="submit-btn">Send</button>
+        </form>
+    </div>
+</div>
+
         </div>
-        <img src="./assets/img/hero-img.png" alt="hero-img">
+        <img class="hero-img" src="./assets/img/hero-img.png" alt="hero-img">
     </section>
     <section class="about" id="about">
         <img class="shadow-pop-tr" src="./assets/img/about-img.png" alt="about-img">
@@ -102,26 +125,26 @@
             </div>
         </div>
     </section>
-    <section>
-        <div class="statistics">
-            <div class="statistics-items itm1" data-aos="fade-down-right">
-                <span><img src="./assets/img/checklist.png" alt=""></span><br>
-                <span>230 <br> Completed Projects</span>
+    <!-- <section>
+            <div class="statistics">
+                <div class="statistics-items itm1" data-aos="fade-down-right">
+                    <span><img src="./assets/img/checklist.png" alt=""></span><br>
+                    <span>230 <br> Completed Projects</span>
+                </div>
+                <div class="statistics-items itm2" data-aos="fade-down-right">
+                    <span><img src="./assets/img/person.png" alt=""></span><br>
+                    <span>1068 <br> Happy Clients</span>
+                </div>
+                <div class="statistics-items itm3" data-aos="fade-down-right">
+                    <span><img src="./assets/img/hand.png" alt=""></span><br>
+                    <span>230 <br> Prospective Clients</span>
+                </div>
+                <div class="statistics-items itm4" data-aos="fade-down-right">
+                    <span><img src="./assets/img/bulb.png" alt=""></span><br>
+                    <span>330 <br> Completed Projects</span>
+                </div>
             </div>
-            <div class="statistics-items itm2" data-aos="fade-down-right">
-                <span><img src="./assets/img/person.png" alt=""></span><br>
-                <span>1068 <br> Happy Clients</span>
-            </div>
-            <div class="statistics-items itm3" data-aos="fade-down-right">
-                <span><img src="./assets/img/hand.png" alt=""></span><br>
-                <span>230 <br> Prospective Clients</span>
-            </div>
-            <div class="statistics-items itm4" data-aos="fade-down-right">
-                <span><img src="./assets/img/bulb.png" alt=""></span><br>
-                <span>330 <br> Completed Projects</span>
-            </div>
-        </div>
-    </section>
+        </section> -->
     <section class="works-section" id="my works">
         <div class="works-header">
             <h2>MY WORKS</h2>
@@ -130,59 +153,79 @@
         <div class="works">
             <div>
                 <h3>Pokemon App</h3>
-                <a href="https://charlotteseyab.github.io/pokemon-api/"><img src="./assets/img/pokemon-screenshot.png"
-                        alt=""></a>
+                <a href="https://charlotteseyab.github.io/pokemon-api/" target="_blank"><img
+                        src="./assets/img/pokemon-screenshot.png" alt=""></a>
             </div>
             <div>
                 <h3>Coffee Website</h3>
-                <a href="https://charlotteseyab.github.io/coffee-page/"><img src="./assets/img/coffee-screenshot.png"
-                        alt=""></a>
+                <a href="https://charlotteseyab.github.io/coffee-page/" target="_blank"><img
+                        src="./assets/img/coffee-screenshot.png" alt=""></a>
             </div>
             <div>
                 <h3>Restuarant Website</h3>
-                <a href="https://charlotteseyab.github.io/practice-work/"><img src="./assets/img/pato-place.png"
-                        alt=""></a>
+                <a href="https://charlotteseyab.github.io/practice-work/" target="_blank"><img
+                        src="./assets/img/pato-place.png" alt=""></a>
             </div>
             <div>
                 <h3>Fashion Website</h3>
-                <a href="https://charlotteseyab.github.io/Fashion-page/"><img src="./assets/img/fashion-page.png"
-                        alt=""></a>
+                <a href="https://charlotteseyab.github.io/Fashion-page/" target="_blank"><img
+                        src="./assets/img/fashion-page.png" alt=""></a>
             </div>
             <div>
                 <h3>Library App</h3>
-                <a href="https://library-app-coral-six.vercel.app/"><img src="./assets/img/librarium.png" alt=""></a>
+                <a href="https://library-app-coral-six.vercel.app/" target="_blank"><img
+                        src="./assets/img/librarium.png" alt=""></a>
             </div>
         </div>
 
     </section>
+    <section class="works-section" id="my-api">
+        <div class="works-header">
+            <h2>API DOCUMENTATIONS</h2>
+            <p>A Collection of my API documentations</p>
+        </div>
+        <div class="works">
+            <div>
+                <h3>Library API</h3>
+                <a href="https://documenter.getpostman.com/view/38771485/2sAY4skQTZ" target="_blank"><img
+                        src="./assets/img/library-api.png" alt=""></a>
+            </div>
+            <div>
+                <h3>Booking API</h3>
+                <a href="https://documenter.getpostman.com/view/38771485/2sAXxLCZid" target="_blank"><img
+                        src="./assets/img/booking-api.png" alt=""></a>
+            </div>
+            <div>
+                <h3>Notes API</h3>
+                <a href="https://documenter.getpostman.com/view/38771485/2sAY4uC3XD" target="_blank"><img
+                        src="./assets/img/notes-api.png" alt=""></a>
+            </div>
+        </div>
+        <!-- <button class="api-btn">See More</button> -->
+    </section>
     <section class="contact" id="contact">
-        <h2>WANT TO CONTACT ME ?</h2>
+        <h2>WANT TO REACH ME ?</h2>
         <h3>I'm Available</h3>
-        <button class="contact-btn">Contact Me Now</button>
+        <button class="contact-btn" id="openFormBtn">Contact Me Now</button>
     </section>
     <section>
-        <div class="container">
-            <form>
+        <div id="popupForm" class="form-popup">
+            <div class="form-container">
+                <span class="close" id="closeFormBtn">&times;</span>
+                <h2>Contact Me</h2>
+                <form action="submit_form.php" method="POST">
+                    <label for="name">Name</label>
+                    <input type="text" id="name" name="name" required>
 
-                <label for="fname">First Name</label>
-                <input type="text" id="fname" name="firstname" placeholder="Your name..">
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email" required>
 
-                <label for="lname">Last Name</label>
-                <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+                    <label for="message">Message</label>
+                    <textarea id="message" name="message" required></textarea>
 
-                <label for="country">Country</label>
-                <select id="country" name="country">
-                    <option value="australia">Ghana</option>
-                    <option value="canada">Canada</option>
-                    <option value="usa">USA</option>
-                </select>
-
-                <label for="subject">Message</label>
-                <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
-
-                <input type="submit" value="Submit">
-
-            </form>
+                    <button type="submit" class="submit-btn">Send</button>
+                </form>
+            </div>
         </div>
     </section>
     <section class="last-sec">
@@ -207,7 +250,7 @@
                 <div class="foot-itms">
                     <h4>QUICK LINKS</h4>
                     <a href="#home"><span>Home</span></a>
-                  <a href="#about">  <span>About</span></a>
+                    <a href="#about"> <span>About</span></a>
                     <a href="#services"><span>Services</span></a>
                     <a href="#my works"><span>My Works</span></a>
                     <a href="#contact"><span>Contact Us</span></a>
@@ -216,13 +259,12 @@
                     <h4>NEWSLETTER</h4>
                     <p>Be the first to know about new <br> arrivals, look books, sales & promos!</p>
                     <label for="email"></label>
-                    <input type="text" id="email" name="email" value="Your Email" class="text-gray">
-                    <input type="submit" value="&#x1F4E7;" id="foot-btn">
-                    <hr>
+                    <input type="text" id="email" name="email" placeholder="Your Email" class="text-gray">
+                    <button class="subscribe-btn">Subscribe</button>
                 </div>
             </div>
             <hr>
-            <p class="end">Copyright © 20242020 All rights reserved | This template is made with 🧡 by <a class="ending"
+            <p class="end">Copyright © 2024 All rights reserved | This template is made with 🧡 by <a class="ending"
                     href="#">Charlotte</a></p>
         </footer>
     </section>
@@ -231,7 +273,6 @@
     <script>
         AOS.init()
     </script>
-    <div id="google_translate_element"></div>
 
     <script type="text/javascript">
         function googleTranslateElementInit() {
